update syle and added bg wallpaper

--- a/src/components/AnimatedBG/AnimatedBG.module.css
+++ b/src/components/AnimatedBG/AnimatedBG.module.css
@@ -1,3 +1,9 @@
 .backgroundContainer {
     height: 100vh;
+    background: url('../../assets/bg.jpg') no-repeat center center;
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
 }
